k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: customers
spec:
  selector:
    app: customers
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
