k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: customers
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: customers.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: customers
                port:
                  number: 80
